"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-09-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-16:
	  Completed unroll_context::lookup_{value,instance}_collection, 
		the last undefined references... defined!
	  Fixed minor type in is_loop_variable.  
	  Tests: lexer/ is clean, parser/basic bombs as expected.
	  Upcoming: sub-branch to rework module since top-level instances
		are now relocated to footprint.  


	* HACKT-00-01-04-main-00-80-03-instance-00-15:
	  Only two undefined references left!!!
	  Implemented most of remaining definitions, many copy-modified
		from param_value_collection to param_value_placeholder, 
		including many boolean query functions.  
	  Got rid of PLACEHOLDER_SUPER_INSTANCES switch.   
	  Many other methods commented out from old instance and value
		collection headers and modules, now obsolete w/ placeholders.  


2006-09-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-14:
	  Marked more obsolete functions, and defined more missing references.
	  Considering doing-away with pre-unroll-time 'may-analyses'
		and forget about trying to catch errors earlier than necessary.
		Minimize the risk of reject-valid or accept-invalid.  


	* HACKT-00-01-04-main-00-80-03-instance-00-13:
	  Switched off more compile-time (pre-unroll) resolve functions.
	  More missing definitions filled in for placeholder classes.
	  Few more rounds before all undefined references resolved...


	* HACKT-00-01-04-main-00-80-03-instance-00-12:
	  Implemented more dump/get_name category methods for placeholders,
		and marked others obsolete or unused.  
	  Implemented instance/parameter formal queries.  
	  Re-implemented simple_meta_value_reference::unroll_resolve_rvalues
		*much* more cleanly than before.  


2006-09-05	David Fang		<fangism@users.sourceforge.net>
